<resources>
    <string name="app_name">CMO</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="user_name">user name</string>
    <string name="has_been_updated_a_post">has been updated a post</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="post_description">Post Description...</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="log_out">Log Out</string>
    <string name="todo3">TODO</string>
    <string name="share_your_stories">----Share Your Stories...</string>
    <string name="post">Post</string>
    <string name="posting_to_c_m_o">Posting to C.M.O</string>
    <string name="location">Location</string>
    <!--    <string name = "edit_profile">Edit Profile</string>-->
    <!--    <string name = "sign_out">Sign Out</string>-->
</resources>
