<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/mainBackground">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/post_border"
            android:layout_marginRight="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/postpro"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="2dp"
                    android:background="@drawable/profile"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/img_default_profile"
                    android:contentDescription="@string/todo">

                </ImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/post_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:layout_marginStart="5dp"
                        android:textAlignment="textStart"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:fontFamily="sans-serif-dark">

                    </TextView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            >

                            <TextView
                                android:id="@+id/post_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/date"
                                android:textColor="@android:color/black"
                                android:textSize="12sp"
                                android:fontFamily="sans-serif-medium">

                            </TextView>

                            <TextView
                                android:id="@+id/post_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/time"
                                android:textColor="@android:color/black"
                                android:textSize="12sp"
                                android:fontFamily="sans-serif-medium">

                            </TextView>

                        </LinearLayout>

                        <TextView
                            android:layout_marginLeft="5dp"
                            android:id="@+id/post_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Location"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:fontFamily="sans-serif-medium">

                        </TextView>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/post_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_description"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:padding="3dp"
                android:textSize="17sp"
                android:textColor="@android:color/black"
                android:fontFamily="sans-serif-dark">
            </TextView>

            <ImageView
                android:id="@+id/post_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="3dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/todo">
            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                >

                <ImageButton
                    android:id="@+id/like_button"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/dislike"
                    >
                </ImageButton>

                <TextView
                    android:id="@+id/display_no_of_likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 likes"
                    android:padding="15dp"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"
                    />

                <ImageButton
                    android:id="@+id/comment_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="190dp"
                    android:baselineAlignBottom="false"
                    android:src="@drawable/comment"
                    >
                </ImageButton>


            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>




</RelativeLayout>